--- a/Lab_4/lab_4/store/templates/store/info/about.html
+++ b/Lab_4/lab_4/store/templates/store/info/about.html
@@ -1,172 +1,50 @@
 {% extends "store/base.html" %}
 {% load static %}
 {% block title %}О нас{% endblock %}
+{% block head %}
+    <link href="{% static "css/about_company.css" %}" rel="stylesheet">
+{% endblock %}
 {% block content %}
-    <article>
-        <h4>Наша история</h4>
+    <main>
+        <h1>About company</h1>
+        <p><dfn translate="no" class="company-name"> Toy store</dfn> - a young company specializing in the
+            sale of toys</p>
+        <h2>Company videos</h2>
+        <iframe class="video" width="560" height="315"
+                src="https://www.youtube.com/embed/ITXVIK8KZuI?si=YFVb2CT2tzrblCA3"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+        gyroscope; picture-in-picture; web-share" allowfullscreen>
+        </iframe>
+        <h2>History by year</h2>
+        <ul class="history">
+            {% for event in history %}
+                <li class="history-item">
+                    <p class="history-year">{{ event.year }}</p>
+                    <p class="history-description">{{ event.event }}</p>
+                </li>
+            {% endfor %}
+        </ul>
 
-        В мире игрушек, название <em>"Детские мечты"</em> всегда было синонимом качества и радости. Позвольте нам
-        рассказать вам о нашей истории и наших ценностях.
-
-        <h5>О нас</h5>
-
-        Мы - фабрика игрушек, основанная с одной целью: создавать игрушки, которые приносят радость
-        <wbr/>
-        и вдохновение. Наши творческие дизайнеры и мастера усердно работают, чтобы каждая игрушка
-        <wbr/>
-        была особенной.
-
-        <h5>Наше предложение</h5>
-
-        В нашем магазине вы найдете широкий выбор игрушек для детей всех возрастов. Мы предлагаем
-        <wbr/>
-        игрушки, которые способствуют развитию навыков и воображения, а также приносят удовольствие.
-
-        <h5>Наше сообщество</h5>
-
-        Мы гордимся тем, что создали сообщество любителей игрушек. Мы поддерживаем обмен опытом
-        <wbr/>
-        и идеями среди наших клиентов и приглашаем вас присоединиться к нашему сообществу.
-
-        <h5>Информация о нашем источнике</h5>
-
-        Мы стремимся предоставлять только лучшие и качественные игрушки. Наша информация
-        <wbr/>
-        исходит из надежных источников, связанных с миром игрушек.
-
-        <blockquote
-                cite="https://www.jfklibrary.org/learn/about-jfk/life-of-john-f-kennedy/john-f-kennedy-quotations#:~:text=For%20time%20and%20the%20world,Kennedy%2C%201963.">
-            - Джон Ф. Кеннеди
-            Но Гете говорит нам в своем величайшем стихотворении, что Фауст потерял свободу своей души, когда сказал
-            уходящему моменту:
-            <wbr/>
-            'Останься, ты так прекрасен.' И наша свобода тоже подвергается опасности, если мы останавливаемся перед
-            уходящим моментом, если мы опираемся на наши достижения,
-            <wbr/>
-            если мы не идем в ногу с прогрессом. Время и мир не стоят на месте. Изменение - закон жизни. И те, кто
-            смотрят только на
-            <wbr/>
-            прошлое или настоящее, обречены упустить будущее.
-        </blockquote>
-
-        <h5>Заключение</h5>
-
-        Путь "Детские мечты" от ее зарождения до глобального влияния - это свидетельство нашего стремления к образованию
-        и культуре. Исследуя наши игрушки и цифровые архивы, вы сможете оценить нашу историю и нашу вечную преданность
-        миру игрушек.
-
-    </article>
-
-    <article translate="yes">
-        <figure>
-            <br/>Here are breathtaking poem <br/>
-            <article>
-                Eyes of grey -- a sodden quay,<br/>
-                Driving rain and falling tears,<br/>
-                As the steamer wears to sea<br/>
-                In a parting storm of cheers.<br/>
-                Sing, for Faith and Hope are high --<br/>
-                None so true as you and I --<br/>
-                Sing the Lovers' Litany:
-                <wbr/>
-                "Love like ours can never die!"<br/>
-                <br/>
-                Eyes of black -- a throbbing keel,<br/>
-                Milky foam to left and right;<br/>
-                Whispered converse near the wheel<br/>
-                In the brilliant tropic night.<br/>
-                Cross that rules the Southern Sky!<br/>
-
-                Stars that sweep and wheel and fly,
-                <wbr/>
-                Hear the Lovers' Litany:
-                <wbr/>
-                Love like ours can never die!"<br/>
-                <br/>
-                Eyes of brown -- a dusy plain<br/>
-                Split and parched with heat of June,<br/>
-                Flying hoof and tightened rein,<br/>
-                Hearts that beat the old, old tune.<br/>
-                Side by side the horses fly,<br/>
-                Frame we now the old reply
-                <wbr/>
-                Of the Lovers' Litany:
-                <wbr/>
-                "Love like ours can never die!"<br/>
-                <br/>
-                Eyes of blue -- the Simla Hills<br/>
-                Silvered with the moonlight hoar;<br/>
-                Pleading of the waltz that thrills,<br/>
-                Dies and echoes round Benmore.<br/>
-                "Mabel," "Officers," "Good-bye,"<br/>
-                Glamour, wine, and witchery -<br/>
-                On my soul's sincerity,
-                <wbr/>
-                "Love like ours can never die!"<br/>
-                <br/>
-                Maidens of your charity,<br/>
-                Pity my most luckless state.<br/>
-                Four times Cipid's debtor I --<br/>
-                Bankrupt in quadruplicate.<br/>
-                Yet, despite this evil case,<br/>
-                And a maiden showed me grace,<br/>
-                Four-and-forty times would I<br/>
-                Sing the Lovers' Litany:
-                <wbr/>
-                "Love like ours can never die!"<br/>
-            </article>
-            <figcaption>
-                Rudyard Kipling <i>"The Lovers' Litany"</i>
-            </figcaption>
-        </figure>
-    </article>
-
-    <br/>
-    <img src="/media/logos/Logo.png" alt="logo of the company"
-         sizes="(max-width: 1em) 1em, 2em"
-         srcset="/media/logos/Logo.png 1.33x,
-          /media/logos/LogoHighRes.png 2.67x,
-          /media/logos/LogoHighResUltra.png 4x">
-    <br/>
-
-    <video width="360" height="240"
-           src="/media/videos/fabrics_mem.mp4"
-           autoplay controls preload="none" muted>
-        Video cannot be displayed
-    </video>
-    <br/>
-    <article>
-        <iframe name="fr" width="400" height="400" srcdoc=" {% include "store/info/sertificate.html" %}"></iframe>
-    </article>
-    <br/>
-    <audio autoplay controls id="awesome_music" muted>
-        <source src="/media/audio/expic_music.mp3"/>
-    </audio>
-    <section>
-        <h4>История по годам</h4>
-
+        <h2>Requisites</h2>
         <section>
-            <h2>2000</h2>
-            <p>Становление компании.</p>
+            <p class="requisite">МТС: +375 (33)3-653-488</p>
+            <p class="requisite">email: koooosmppp@gmail.com</p>
         </section>
-        <hr>
-
-        <section>
-            <h2>2005</h2>
-            <p>Расцвет компании.</p>
+        <h2>Logo</h2>
+        <img class="logotip" src="../../../../media/logos/Logo.png" title="Логотип компании" height="200" width="200">
+        <h2>Certificate</h2>
+        <section class="sertificate">
+            <h3>Сертификат</h3>
+            <p>ООО «Приносим радость»</p>
+            <p>Юридический адрес: 220073, Республика Беларусь, г. Минск, ул. Якуба Коласа, д. 24, кв. 24, каб. 2</p>
+            <p>УНП 823667313</p>
+            <p>Адрес для почтовых отправлений: 654112, а/я 166.</p>
+            <p>Свидетельство о государственной регистрации №823667313 от 13 апреля 2017 г. выдано Минским
+                горисполкомом</p>
+            <p>Зарегистрировано Министерством информации Республики Беларусь 11 мая 2017 г. в Государственном реестре
+                изготовителей и распространителей бытовой химии изданий Республики Беларусь в качестве распространителя
+                бытовой химии за №3/1656</p>
+            <p>Зарегистрирован в Торговом реестре Республики Беларусь 31 мая 2017 г. за №416870</p>
         </section>
-        <hr>
-
-        <section>
-            <h2>2010</h2>
-            <p>Переименование компании.</p>
-        </section>
-    </section>
-    <section>
-        <h2>Our goals and principles</h2>
-        <listing>
-            Some listing text
-            Wow!
-        </listing>
-    </section>
+    </main>
 {% endblock %}
