--- a/Lab_4/lab_4/store/templates/store/info/review_form.html
+++ b/Lab_4/lab_4/store/templates/store/info/review_form.html
@@ -1,13 +1,16 @@
 {% extends "store/base.html" %}
 {% load static %}
 
+{% block head %}
+    <link href="{% static "css/create_review.css" %}" rel="stylesheet">
+{% endblock %}
 {% block content %}
-    <form method="post">
+    <form method="post" class="form-container">
         {% csrf_token %}
         {{ form.non_field_errors }}
 
         <div>
-            <label for="{{ form.reviewer.id_for_label }}">Reviewer name:</label>
+            <label  for="{{ form.reviewer.id_for_label }}">Reviewer name:</label>
             {{ form.reviewer }}
             {{ form.reviewer.errors }}
         </div>
@@ -24,3 +27,43 @@
         <input type="submit" value="review"/>
     </form>
 {% endblock %}
+
+
+
+
+
+
+
+{#{% extends "store/base.html" %}#}
+{#{% load static %}#}
+{##}
+{#{% block title %}Create review{% endblock %}#}
+{##}
+{#{% block head %}#}
+{#    <meta name="description" content="Создание отзыва">#}
+{#    <meta name="author" content = "Egor Savonchik">#}
+{#    <link href="{% static "css/create_review.css" %}" rel="stylesheet">#}
+{#{% endblock %}#}
+{##}
+{#{% block content %}#}
+{#<main>#}
+{#    <form method="post" action="" class="form-container">#}
+{#        {% csrf_token %}#}
+{#        <label for="id_title">Title:</label>#}
+{#        <input type="text" id="id_title" name="title" class="my-class" required><br>#}
+{##}
+{#        <label for="id_text">Text:</label>#}
+{#        <textarea id="id_text" name="text" class="my-class" required></textarea><br>#}
+{##}
+{#        <label for="id_gradle">Gradle:</label>#}
+{#        <select id="id_gradle" name="gradle" class="my-class" required>#}
+{#            {% for choice in form.gradle.field.choices %}#}
+{#                <option value="{{ choice.0 }}">{{ choice.1 }}</option>#}
+{#            {% endfor %}#}
+{#        </select><br>#}
+{##}
+{#        <input type="submit" value="Create review">#}
+{#      </form>#}
+{#</main>#}
+{#{% endblock %}#}
+{##}
